Fixed Grid Command Column header text to be vertically aligned with other header text, such as in the group finder.

--- a/RockWeb/Styles/_grid.less
+++ b/RockWeb/Styles/_grid.less
@@ -361,6 +361,10 @@ td.grid-col-actions {
   }
 }
 
+.grid .table > thead > tr > th.grid-columncommand {
+  padding: 12px;
+}
+
 .table .color-field {
   width: 4px;
   padding: 0;
